# OrderSphere

./: .env.example  Dockerfile  README.md  main.py  pyproject.toml  utils.py
config/: settings.py
controllers/: order_controller.py
db/: __init__.py  connection.py
db/dao/: order_dao.py
resources/: api.py  event_handler.py
schemas/: exception_schema.py  order_schema.py  request_schema.py  response_schema.py
